<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICAN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="share_a_link">Share a link with others:</string>
	<string name="hint_link_url">Link URL</string>
	<string name="hint_link_description">Add a description</string>
	<string name="hint_your_name">Your Name</string>
	<string name="button_share">Share</string>

</resources>
