<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:background="#E3E3E3"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

	<LinearLayout
		style="@style/CardLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:text="@string/share_a_link"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<EditText
			android:id="@+id/link_url"
			android:hint="@string/hint_link_url"
			android:singleLine="true"
			android:inputType="textUri"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<EditText
			android:id="@+id/link_description"
			android:hint="@string/hint_link_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/link_author"
				android:layout_weight="1"
				android:inputType="textPersonName|textCapWords"
				android:hint="@string/hint_your_name"
				android:layout_width="0dp"
				android:layout_height="wrap_content"/>

			<Button
				android:onClick="shareLink"
				android:text="@string/button_share"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

		</LinearLayout>

	</LinearLayout>

    <ListView
		android:id="@+id/link_list"
		android:divider="@android:color/transparent"
		android:dividerHeight="8dp"
		android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
